<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/songItemPadding"
    android:layout_marginStart="@dimen/songItemPadding"
    android:layout_marginTop="@dimen/songItemPadding"
    android:background="@android:color/white"
    app:cardElevation="@dimen/cardview_default_elevation">


    <RelativeLayout
        android:id="@+id/songInfoParent"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/song_item_bg"
        android:foreground="?attr/selectableItemBackground">

        <com.abhi.olaplay.customviews.FixedRatioImageView
            android:id="@+id/coverImgV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:foreground="?attr/selectableItemBackground"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/songTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@id/coverImgV"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/songTitle"
            android:fontFamily="@font/anton"
            android:textColor="@color/songTitleColor"
            android:textSize="@dimen/song_title_size" />

        <TextView
            android:id="@+id/songArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/songTitle"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@id/coverImgV"
            android:alpha="0.6"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/songArtist"
            android:textColor="@color/songArtistColor"
            android:textSize="@dimen/song_artist_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:alpha="0.6"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp">

            <ImageButton
                android:id="@+id/itemStarBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/fav"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_unstarred_24dp" />

            <ImageButton
                android:id="@+id/itemMenuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/itemStarBtn"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/options"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_options_24dp" />
        </RelativeLayout>
    </RelativeLayout>


</android.support.v7.widget.CardView>